cosmos/clusters/prod/apps/kepler-orbit/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kepler-orbit
---
apiVersion: v1
kind: Service
metadata:
  namespace: kepler-orbit
  name: kepler-orbit
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 6090
  selector:
    app: kepler-orbit
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kepler-orbit
  name: kepler-orbit
  labels:
    app: kepler-orbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kepler-orbit
  template:
    metadata:
      labels:
        app: kepler-orbit
    spec:
      containers:
        - name: kepler-orbit
          image: ghcr.io/incognito124/kepler-orbit:1750277606 # {"$imagepolicy": "flux-system:incognito124-kepler-orbit-policy"} 
          ports:
            - name: web
              containerPort: 6090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: kepler-orbit
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`orbit.msmetko.xyz`)
      kind: Rule
      services:
        - name: kepler-orbit
          port: 80
  tls:
    certResolver: letsencrypt
